--- a/storyarchives/proceed-to-storyarchives/stories.html
+++ b/storyarchives/proceed-to-storyarchives/stories.html
@@ -294,7 +294,13 @@
 <div class= "texts">Start Reading</div>
 </a></div></div></div>
 
-
+<div class= "column">
+<div class="box-container">
+<img src= "img/37.png"class= "image">
+<a href= "read-stories-now/the-gift-of-the-magi.html"class= "box-icon"><div class="box-overlay">
+<img src= "img/read.png"id= "box-img">
+<div class= "texts">Start Reading</div>
+</a></div></div></div>
 
 <!----Next and previous page button----->
 <div class= "column">
